--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,14 @@
 
 		<maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version>
 
-		<flink-clients.version>2.1.0</flink-clients.version>
 		<flink-connector-base.version>2.1.0</flink-connector-base.version>
 		<flink-connector-kafka.version>4.0.1-2.0</flink-connector-kafka.version>
+		<flink-clients.version>2.1.0</flink-clients.version>
 		<flink-streaming-java.version>2.1.0</flink-streaming-java.version>
+		<flink-parquet.version>2.1.0</flink-parquet.version>
+		<flink-json.version>2.1.0</flink-json.version>
 
+		<jackson-datatype-jsr310.version>2.17.1</jackson-datatype-jsr310.version>
 		<lombok.version>1.18.42</lombok.version>
 	</properties>
 
@@ -45,6 +48,10 @@
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-stream-kafka</artifactId>
+		</dependency>
 
 		<!-- Flink -->
 		<dependency>
@@ -70,6 +77,44 @@
 			<artifactId>flink-clients</artifactId>
 			<version>${flink-clients.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-json</artifactId>
+			<version>${flink-json.version}</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-parquet</artifactId>
+			<version>${flink-parquet.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.parquet</groupId>
+			<artifactId>parquet-avro</artifactId>
+			<version>1.12.2</version>
+			<optional>true</optional>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.hadoop</groupId>
+					<artifactId>hadoop-client</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>it.unimi.dsi</groupId>
+					<artifactId>fastutil</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<!-- Libraries -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>${jackson-datatype-jsr310.version}</version>
+		</dependency>
+
 
 		<!-- Dev tools -->
 		<dependency>
